@@ -99,7 +99,7 @@ public class RemoteMaster extends JP1Frame implements ActionListener, PropertyCh
   private static JP1Frame frame = null;
 
   /** Description of the Field. */
-  public final static String version = "v2.03 Alpha 10";
+  public final static String version = "v2.03 Alpha 11";
 
   /** The dir. */
   private File dir = null;
